Fix frozen APG

APG now returns control after the solver finishes.

BUG: 277865